--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scuzero UI</title>
+  <title>Scuzero - Camera Access Monitor</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -25,62 +25,76 @@
       border-radius: 5px;
       cursor: pointer;
     }
-    .camera-control {
+    .section {
       margin: 15px 0;
       padding: 15px;
       border: 1px solid #ddd;
       border-radius: 5px;
       background: #f9f9f9;
     }
-    .checkbox-container {
-      display: flex;
-      align-items: center;
-      margin: 10px 0;
-    }
-    .checkbox-container input[type="checkbox"] {
-      width: 20px;
-      height: 20px;
-      margin-right: 10px;
-    }
     .status {
       margin-left: 10px;
       font-weight: bold;
     }
-    .status.enabled {
+    .status.active {
       color: green;
     }
-    .status.disabled {
+    .status.inactive {
       color: red;
-    }
-    .status.error {
-      color: orange;
     }
     .info-text {
       font-size: 12px;
       color: #666;
       margin-top: 10px;
     }
+    .log-area {
+      width: 100%;
+      height: 200px;
+      margin-top: 10px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      background: #f8f8f8;
+      font-family: monospace;
+      font-size: 12px;
+      resize: vertical;
+    }
+    .controls {
+      margin: 10px 0;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Scuzero UI</h1>
+    <h1>Scuzero Camera Monitor</h1>
 
-    <button onclick="showNativeToast('Hello from JS!')">Toast Test</button>
-    <button onclick="getDeviceInfo()">Device Info</button>
-
-    <br><br>
-
-    <div class="camera-control">
-      <h2>Advanced Camera Protection</h2>
-      <div class="checkbox-container">
-        <input type="checkbox" id="cameraToggle" onchange="toggleCameraProtection()">
-        <label for="cameraToggle">Enable Camera Protection</label>
-        <span id="cameraStatus" class="status">Ready</span>
+    <div class="section">
+      <h2>Camera Access Monitor</h2>
+      <div class="controls">
+        <button onclick="startMonitoring()">Start Monitoring</button>
+        <button onclick="stopMonitoring()">Stop Monitoring</button>
+        <button onclick="clearLogs()">Clear Logs</button>
+        <button onclick="refreshLogs()">Refresh Logs</button>
       </div>
+      <span id="monitorStatus" class="status inactive">Not Monitoring</span>
       <div class="info-text">
-        This feature uses advanced camera hijacking to prevent unauthorized access.
-        A notification will appear while protection is active.
+        Monitors camera access and shows real-time alerts. Requires Usage Access permission.
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>Camera Access Logs</h2>
+      <textarea id="cameraLogs" class="log-area" readonly></textarea>
+      <div class="info-text">
+        Real-time log of camera access attempts. Toasts will also show when access is detected.
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>Permissions</h2>
+      <button onclick="openUsageSettings()">Grant Usage Access</button>
+      <div class="info-text">
+        Required for monitoring which apps use the camera
       </div>
     </div>
   </div>
