--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scuzero - Camera Access Monitor</title>
+  <title>Scuzero - UI</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -42,6 +42,9 @@
     .status.inactive {
       color: red;
     }
+    .status.warning {
+      color: orange;
+    }
     .info-text {
       font-size: 12px;
       color: #666;
@@ -49,52 +52,73 @@
     }
     .log-area {
       width: 100%;
-      height: 200px;
+      height: 300px;
       margin-top: 10px;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 5px;
-      background: #f8f8f8;
-      font-family: monospace;
-      font-size: 12px;
+      background: #1e1e1e;
+      color: #00ff00;
+      font-family: 'Courier New', monospace;
+      font-size: 11px;
       resize: vertical;
+      white-space: pre-wrap;
+      overflow-y: scroll;
     }
     .controls {
+      margin: 10px 0;
+    }
+    .permission-warning {
+      background: #fff3cd;
+      border: 1px solid #ffeaa7;
+      color: #856404;
+      padding: 10px;
+      border-radius: 5px;
       margin: 10px 0;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Scuzero Camera Monitor</h1>
+    <h1>🔒 Scuzero Advanced Camera Monitor</h1>
+
+    <div id="permissionWarning" class="permission-warning" style="display: none;">
+      <strong>⚠ Permissions Required:</strong> 
+      <span id="permissionText"></span>
+      <button onclick="fixPermissions()">Fix Permissions</button>
+    </div>
 
     <div class="section">
-      <h2>Camera Access Monitor</h2>
+      <h2>📹 Camera Access Monitor</h2>
       <div class="controls">
-        <button onclick="startMonitoring()">Start Monitoring</button>
-        <button onclick="stopMonitoring()">Stop Monitoring</button>
-        <button onclick="clearLogs()">Clear Logs</button>
-        <button onclick="refreshLogs()">Refresh Logs</button>
+        <button onclick="startMonitoring()">🚀 Start Advanced Monitoring</button>
+        <button onclick="stopMonitoring()">🛑 Stop Monitoring</button>
+        <button onclick="clearLogs()">🗑️ Clear Logs</button>
+        <button onclick="refreshLogs()">🔄 Refresh Logs</button>
+        <button onclick="checkPermissions()">🔐 Check Permissions</button>
       </div>
       <span id="monitorStatus" class="status inactive">Not Monitoring</span>
       <div class="info-text">
-        Monitors camera access and shows real-time alerts. Requires Usage Access permission.
+        Advanced monitoring detects camera access, app foreground/background events, and flashlight usage.
+        Shows detailed technical information for advanced users.
       </div>
     </div>
 
     <div class="section">
-      <h2>Camera Access Logs</h2>
+      <h2>📋 Camera Access Logs (Advanced)</h2>
       <textarea id="cameraLogs" class="log-area" readonly></textarea>
       <div class="info-text">
-        Real-time log of camera access attempts. Toasts will also show when access is detected.
+        Real-time detailed logs with stack traces, package info, and technical details. 
+        Toasts and notifications will alert you when camera access is detected.
       </div>
     </div>
 
     <div class="section">
-      <h2>Permissions</h2>
-      <button onclick="openUsageSettings()">Grant Usage Access</button>
+      <h2>⚙️ Permissions & Settings</h2>
+      <button onclick="openUsageSettings()">📊 Grant Usage Access</button>
+      <button onclick="requestCameraPermission()">📷 Request Camera Permission</button>
       <div class="info-text">
-        Required for monitoring which apps use the camera
+        Required permissions for full monitoring functionality
       </div>
     </div>
   </div>
